RESOLVED FIXED 84557
RenderDetailsMarker should draw the triangle inside the content box
https://bugs.webkit.org/show_bug.cgi?id=84557
Summary RenderDetailsMarker should draw the triangle inside the content box
Kent Tamura
Reported 2012-04-22 19:27:27 PDT
How to reproduce the problem: 1. Open the URL: data:text/html,<style>body { zoom: 2; } ::-webkit-details-marker { border: 4px solid lime; }</style><details><summary>See detail</summary></details> 2. See the triangle Expected: The triangle is drawn inside the green border. Actual: The triangle is drawn on the green border.
Attachments
Patch (24.84 KB, patch)
2012-04-22 20:44 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2012-04-22 20:44:41 PDT
Hajime Morrita
Comment 2 2012-04-23 10:02:19 PDT
Comment on attachment 138287 [details] Patch I hope we could get rid of RenderDetailsMarker by using SVG in shadow DOM. But it's a different story...
WebKit Review Bot
Comment 3 2012-04-23 17:57:49 PDT
Comment on attachment 138287 [details] Patch Clearing flags on attachment: 138287 Committed r114973: <http://trac.webkit.org/changeset/114973>
WebKit Review Bot
Comment 4 2012-04-23 17:57:56 PDT
All reviewed patches have been landed. Closing bug.
Kent Tamura
Comment 5 2012-04-23 20:04:13 PDT
(In reply to comment #2) > I hope we could get rid of RenderDetailsMarker by using SVG in shadow DOM. But it's a different story... SVG dependency from HTML sounds not good.
Note You need to log in before you can comment on or make changes to this bug.