RenderDetailsMarker should draw the triangle inside the content box https://bugs.webkit.org/show_bug.cgi?id=84557

Reviewed by Hajime Morita.

Source/WebCore:

RenderDetailsMarker didn't support cases in which a marker has
borders and/or padings, or non-square size.

Test: fast/html/details-marker-style.html

* rendering/RenderDetailsMarker.cpp:
(WebCore::RenderDetailsMarker::getPath):
Scale by contentWidth() and contentHeight().
(WebCore::RenderDetailsMarker::paint):
Move the trianle origin by the ammount of left/top borders and paddings.

LayoutTests:

* fast/html/details-marker-style.html: Added.
* platform/mac-snowleopard/fast/html/details-marker-style-expected.png: Added.
* platform/mac-snowleopard/fast/html/details-marker-style-expected.txt: Added.


Canonical link: https://commits.webkit.org/102139@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114973 268f45cc-cd09-0410-ab3c-d52691b4dbfc